WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249653
[IFC][hanging punctuation] Candidate content should let the line breaker know if there's hanging punctuation
https://bugs.webkit.org/show_bug.cgi?id=249653
Summary
[IFC][hanging punctuation] Candidate content should let the line breaker know...
zalan
Reported
2022-12-20 08:48:50 PST
ssia
Attachments
Patch
(10.43 KB, patch)
2022-12-20 08:54 PST
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(10.43 KB, patch)
2022-12-21 12:01 PST
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(10.43 KB, patch)
2022-12-21 12:54 PST
,
zalan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(10.12 KB, patch)
2022-12-21 16:38 PST
,
zalan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(12.66 KB, patch)
2022-12-21 22:08 PST
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2022-12-20 08:54:54 PST
Created
attachment 464123
[details]
Patch
zalan
Comment 2
2022-12-21 12:01:04 PST
Created
attachment 464151
[details]
Patch
zalan
Comment 3
2022-12-21 12:54:00 PST
Created
attachment 464153
[details]
Patch
zalan
Comment 4
2022-12-21 16:38:52 PST
Created
attachment 464157
[details]
Patch
zalan
Comment 5
2022-12-21 22:08:10 PST
Created
attachment 464161
[details]
[fast-cq]Patch
EWS
Comment 6
2022-12-22 05:54:29 PST
Committed
258239@main
(dced9d40e0ba): <
https://commits.webkit.org/258239@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464161
[details]
.
Radar WebKit Bug Importer
Comment 7
2022-12-22 05:55:17 PST
<
rdar://problem/103635898
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug