[IFC][hanging punctuation] Candidate content should let the line breaker know if there's hanging punctuation https://bugs.webkit.org/show_bug.cgi?id=249653

Reviewed by Antti Koivisto.

This patch ensures that the inline content breaker (line breaker) is aware of any hanging punctuation in the candidate content.
This helps when computing if the candidate content fits the available horizontal space.

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineCandidate::InlineContent::setHangingContentWidth):
(WebCore::Layout::LineBuilder::leadingPunctuationWidthForLineCandiate const):
(WebCore::Layout::LineBuilder::trailingPunctuationWidthForLineCandiate const):
(WebCore::Layout::LineBuilder::candidateContentForLine):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.h:

Canonical link: https://commits.webkit.org/258239@main